--- a/ENDG310-Project-3-F2023.ipynb
+++ b/ENDG310-Project-3-F2023.ipynb
@@ -15,7 +15,7 @@
     "- A chat or newsfeed between multiple users.  Different users should be able to post messages and see messages from other users.  A single newsfeed for all users is ok - you do not need to implement any privacy features. \n",
     "\n",
     "Your system must have:\n",
-    "- A clean and easy to use user interaface.  Spend some time making it look nice.  Some inspiration can be found (here)[https://dribbble.com/tags/newsfeed].\n",
+    "- A clean and easy to use user interaface.  Spend some time making it look nice.  Some inspiration can be found [here](https://dribbble.com/tags/newsfeed).\n",
     "- An ability to maintain a history of messages sent for the current session.  You do not have to maintain the history between restarts of your server program.\n",
     "- Be able to run in a brower on your computer using `localhost` or `127.0.0.1`.  You do not have to host it in the cloud or on a server.\n",
     "\n",
